assets/css/style.css
/* ... */
.get-img {
    display: flex;
    align-items: center;
    justify-content: center;
    background-position: center;
    position: relative;
}

#shisizang {
    height: 30em;
    width: 100%;
    background: url(../images/unsplash/junho-chak-aDF2WcvGfkU-unsplash%20v2.jpg);  
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: cover;
    background-position: center;
}

#fish-and-chips {
    height: 30em;
    width: 100%;
    background: url(../images/unsplash/edward-howell-Jbf9nNe_qaE-unsplash%20v2.jpg);  
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: cover;
    background-position: center;
}

#free-swatch {
    height: 30em;
    width: 100%;
    background: url(../images/unsplash/bara-buri-1NPbmHxl_VE-unsplash.jpg);  
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: cover;
    background-position: center;
}

#swatch {
  color: #999999;
  text-decoration: none;
  text-transform: uppercase;
}

    #swatch:hover {
    background-color: gold; 
    transition: all 0.35s ease-in-out;
    -moz-transition: all 0.35s ease-in-out;
    -webkit-transition: all 0.35s ease-in-out;
    -o-transition: all 0.35s ease-in-out;
    }

/*--------------------------------------------Color*/

#call-out {
    font-family: "Montserrat", sans-serif;
    font-size: 80%;
    font-weight: 500;
    color: #f8f8f8;
}

#stay-strong {
    color: #777777;
    font-size: 100%;
    font-weight: 400;
}

/*--------------------------------------------Header*/

header {
    margin: 0;
}

.heading {
    margin-left: 50px;
}

/*--------------------------------------------Footer*/

form {
    display: inline;
    text-align: center;
}

#call-to-action {
    font-family: "Montserrat";
    color: lightcoral;
    font-size: 90%;
    font-weight: 500;
}

footer{
    height: 75px;
}

.top-footer-aside-1 {
  height: 5px;
}

.top-footer-aside-2 {
  height: 5px;
}

.top-footer-aside-3 {
  height: 5px;
}

.top-footer-aside-4 {
  height: 5px;
}

@media all and (min-width: 34em) {
  .top-footer-aside { flex: 1 0 0; }
}

@media all and (min-width: 62em) {
  .main    { flex: 3 0px; }
  .top-footer-aside-1 { order: 1; } 
  .top-footer-aside-2 { order: 2; }
  .main    { order: 3; }
  .top-footer-aside-3 { order: 4; }
  .footer-aside-4 { order: 5; }
  .top-footer  { order: 6; }
}

.top-footer-aside {
    height: 20px;
    color: #777777;
    font-size: 80%;
    align-items: center;
    list-style-type: none;
    margin:0;
    text-transform:none;
    margin-top: 10px;
}

 .top-footer-aside a {
     color: #777777;
     text-decoration: none;
     font-size: 0.8rem;
     font-weight: 400;
     list-style-type: none;
 } 

.top-footer-aside a:hover {
     color:lightcoral;
}

.social-media i:hover {
     color:lightcoral;
     transition: all 0.35s ease-in-out;
     -moz-transition: all 0.35s ease-in-out;
     -webkit-transition: all 0.35s ease-in-out;
     -o-transition: all 0.35s ease-in-out;
}

.social-media i {
        font-size: 80%;
    }

.social-media {
    text-align: center;
}

.social-media li {
    display: inline;
    padding:1%;
}

.social-media i {
    font-size: 140%;
    margin: 1%;
    padding-top: 2%;
    padding-bottom: 2%;
    color: #777777;
    text-align: center;
}

/*--------------------------------------------Btm-Footer Copyright/Logo/Spotify*/

#footerlogo {
    height: 2em;
    width: 6em;
    background: url(../logo/mighty-masks-footer-logo.png);
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: cover;
    
    align-items: center;
    justify-content: center;
    display: block;
    margin-left: auto;
    margin-right: auto;

    position: relative;
}

.btm-footer-aside-1 {
  height: 5px;
  margin-top: 1px;
}

.btm-footer-aside-2 {
  height: 5px;
  margin-top: 1px;
}

.btm-footer-aside-3 {
  height: 5px;
  margin-top: 1px;
}

@media all and (min-width: 34em) {
  .btm-footer-aside { flex: 1 0 0; }
}

@media all and (min-width: 62em) {
  .main    { flex: 3 0px; }
  .btm-footer-aside-1 { order: 1; } 
  .btm-footer-aside-2 { order: 2; }
  .btm-footer-aside-3 { order: 4; }
  .btm-footer  { order: 6; }
}

.btm-footer-aside {
     margin-top: 5em;
     color: #999999;
     text-decoration: none;
     font-size: 0.8rem;
     font-weight: 400;
     list-style-type: none;
}

 .btm-footer-aside a {
     text-decoration: none;
     font-size: 0.8rem;
     font-weight: 400;
     list-style-type: none;
 } 

#shopify {
    height: 0.9em;
    width: 14em;
    background: url(../logo/shopify.jpg);
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: cover;
    
    align-items: center;
    margin-left: auto;
    margin-right: auto;
}

/*--------------------------------------------MightyMasksMap*/
 
iframe {
    height: 19.4em; 
    align-items: flex-end;
    display: flex;
}
 
.outlined {
    height: 100%;
    border: 1px solid rgba(103, 128, 159, .2);
}

/*--------------------------------------------ContactForm*/

/* Style inputs with type="text", select elements and textareas */
input[type=text], select, textarea {
  width: 100%; /* Full width */
  padding: 12px; /* Some padding */ 
  border: 1px solid rgba(103, 128, 159, .2);
  border-radius: 4px; /* Rounded borders */
  box-sizing: border-box; /* Make sure that padding and width stays in place */
  margin-top: 3px; /* Add a top margin */
  margin-bottom: 8px; /* Bottom margin */
  resize: vertical /* Allow the user to vertically resize the textarea (not horizontally) */
}

/* Style the submit button with a specific background color etc */
input[type=submit] {
  background-color: #777777;
  color: white;
  padding: 6px 10px;
  border: none;
  border-radius: 2px;
  cursor: pointer;
}
/* ... */

